Paper Revised. 'Antonio' comments included

--- a/cog-paper.tex
+++ b/cog-paper.tex
@@ -22,6 +22,7 @@
 \title{Enhancing MCTS Performance in Real-Time Strategy Games Through Move Pruning\\
 \thanks{This work has been supported in part by projects B-TIC-402-UGR18 (FEDER and Junta de Andaluc\'{i}a), RTI2018-102002-A-I00 (Ministerio Espa\~{n}ol de Ciencia, Innovaci\'{o}n y Universidades), projects TIN2017-85727-C4-{1-2}-P (Ministerio Espa\~{n}ol de Econom\'{i}a y Competitividad), and TEC2015-68752 (also funded by FEDER).}
 }
+% Antonio - add here your grants also
 
 \author{\IEEEauthorblockN{Abdessamed Ouessai}
 \IEEEauthorblockA{\textit{Dept. Computer Sciences} \\
@@ -74,17 +75,25 @@ ORCID: 0000-0003-1603-9105}
 \section{Introduction}
 \label{sec:introduction}
 
-The complexity of real-time strategy (RTS) games, from an AI perspective, originates from the combinatorial structure of their state and decision spaces. In comparison with classic, benchmark games, such as Chess or Go, the dimensionality of both state, and decision spaces in an RTS game is many orders of magnitude higher \cite{ontanon_survey_2013}. Instead of controlling a single unit in a turn-based fashion, as in the previously mentioned board games, RTS players control multiple units simultaneously, in real-time, and usually, in a much larger board (map) size. The branching factor in an RTS game grows exponentially with the increase in the number of units positioned on the map.
+The complexity of real-time strategy (RTS) games, from an AI perspective, originates from the combinatorial structure of their state and decision spaces. In comparison with classic, benchmark games, such as Chess or Go, the dimensionality of both state, and decision spaces in an RTS game is many orders of magnitude higher \cite{ontanon_survey_2013}. Instead of controlling a single unit in a turn-based fashion, as in the previously mentioned board games, RTS players control multiple units simultaneously, in real-time, and usually, in a much larger board (map) size. Moreover, the branching factor in an RTS game grows exponentially with the increase in the number of units positioned on the map.
 
-Due to the game's complexity, conceiving a human-challenging, RTS game-playing agent, is a challenging task to undertake. The predominant approach taken by researchers and practitioners in the domain, is to decompose the task into manageable sub-tasks targeting various degrees of abstraction. Most commonly, an RTS agent combines high-level strategic components, and low-level tactical components \cite{barriga_combining_2017}. Such decomposition is inspired by the way human players interweave micro- and macro-management, and is shown to be effective by numerous implementations.
+Due to the game's complexity, conceiving a human-challenging, RTS game-playing agent, is a challenging task to undertake. The predominant approach followed by researchers and practitioners in the domain, is to decompose the task into manageable sub-tasks targeting various degrees of abstraction. Most commonly, an RTS agent combines high-level strategic components, and low-level tactical components \cite{barriga_combining_2017}. Such decomposition is inspired by the way human players interweave micro- and macro-management, and it is shown to be effective by numerous implementations.
 
-Holistic, search-based approaches such as MCTS (Monte Carlo Tree Search), enjoyed a remarkable success in computer Go, as demonstrated by AlphaGo \cite{silver_mastering_2016}. However, in RTS games, MCTS-based agents struggle with the enormous decision space, and fail to scale suitably when the branching factor grows past a certain threshold. Such downside, limits MCTS applicability to smaller and limited scenarios, such as tactical planning, or small maps. Abstracting the decision space is a tried and tested technique for scaling MCTS-based approaches to larger scenarios, at the expense of sacrificing tactical performance, due to the coarser actions considered.
+Holistic, search-based approaches such as Monte Carlo Tree Search (MCTS), enjoyed a remarkable success in computer Go, as demonstrated by AlphaGo \cite{silver_mastering_2016}.
+% Antonio - Include some other successful aplications of MCTS to game solving or to game agents' AI. It has been used not only for Go. This is important to remark why we have chosen MCTS as a reference for this study, even if almost all the people in this area will know about its value. ;D
+ However, in RTS games, MCTS-based agents struggle with the enormous decision space, and fail to scale suitably when the branching factor grows past a certain threshold. Such downside, limits MCTS applicability to smaller and limited scenarios, such as tactical planning, or small maps. Abstracting the decision space is a tried and tested technique for scaling MCTS-based approaches to larger scenarios, 
+% Antonio - add a reference to this asseveration, if possible
+at the expense of sacrificing tactical performance, due to the coarser actions considered.
 
-In this paper, we propose an approach to enhance the performance and scalability of search-based techniques, particularly MCTS-based, by pruning unnecessary and detrimental player-actions, from the decision space of an RTS game. We inspect the low-level structure of the search space and identify detrimental player-actions, and then apply a number of hard-pruning approaches to remove those player-actions during search. The desired outcomes of such approach is the reduction of the branching factor, and the exploration of more promising player-actions. Our pruning approach focuses on a class of player-actions we identify as Inactive Player-Actions (IPAs), and is applied for both UCT and NaïveMCTS. The experimentation results, using \mRTS{}, show an important performance gain, relative to the size of the map in use.
+In this paper, we propose an approach to enhance the performance and scalability of search-based techniques, particularly MCTS-based, by pruning unnecessary and detrimental player-actions, from the decision space of an RTS game. 
+% Antonio - To be applied by an autonomous agent (as a part of its AI engine)
+We inspect the low-level structure of the search space and identify detrimental player-actions, and then apply a number of hard-pruning approaches to remove those player-actions during search. The desired outcomes of such approach is the reduction of the branching factor, and the exploration of more promising player-actions. Our pruning approach focuses on a class of player-actions we identify as Inactive Player-Actions (IPAs), 
+% Antonio - You should justify why have you chosen IPAs instead of any other possible action
+and is applied for two MCTS approaches: UCT (Upper Confidence bounds for Trees)
+% Antonio - you haven't mentioned UCT before. I have done it. ;)
+ and NaïveMCTS. The experimentation results, using \mRTS{}, show an important performance gain, relative to the size of the map in use.
 
 The rest of this paper is organized as follows : Section \ref{sec:background} reviews some background information about RTS games, \mRTS{} and MCTS. Section \ref{sec:state_of_the_art} presents the related state of the art and Section \ref{sec:proposed_method} describes Inactive Player-Actions and the move pruning approaches implemented. Experimental results are presented and discussed in Section \ref{sec:experiments}, and Section \ref{sec:conclusions} concludes the paper with some conclusions and future perspectives.
-% Antonio - You must use references to sections and subsections. Use "label" command to set the name and "ref" command to reference it. ;)
-%           Please, check it out along the text for missing references non properly done.
 
 % -------------------------------------------- BACKGROUND ------------------------------------------
 
@@ -93,9 +102,13 @@ The rest of this paper is organized as follows : Section \ref{sec:background} re
 
 \subsection{Real-Time Strategy Games}
 
-A sub-genre of strategy video games, real-time strategy games simulate a warfare situation, where each side of the game is given control over a military base, and is tasked with collecting resources and recruiting troops. To emerge victorious, the player has to completely annihilation the opponent's forces. RTS games progress in real-time, which signifies that players can act simultaneously, and that the effect of executing an action is not necessarily immediate, in addition to the very short decision cycle. Usually, an RTS is played from a top-down perspective, over a large grid-based map, covered by a fog-of-war layer reducing observability, and increasing the game's difficulty and complexity. Furthermore, the execution of a unit-action can be influenced by some stochastic parameters, introducing non-determinism to the mix. Players control their units by issuing unit-actions to each, and a player-action is the combination of unit-actions issued simultaneously at a given game cycle.
+A sub-genre of strategy video games, real-time strategy games commonly simulate a warfare situation, where each side of the game is given control over a military base, and is tasked with collecting resources and recruiting troops.
+% Antonio - There are RTS with other features, so I would add 'commonly'
+ To emerge victorious, the player has to completely annihilate the opponent's forces. RTS games progress in real-time, which means that players can act simultaneously, and that the effect of executing an action is not necessarily immediate, in addition to the very short decision cycle. Usually, an RTS is played from a top-down perspective, over a large grid-based map, covered by a fog-of-war layer reducing observability, and increasing the game's difficulty and complexity. Furthermore, the execution of a unit-action can be influenced by some stochastic parameters,
+% Antonio - could you clarify this? What stochastic parameters do you refer to? ;)
+ introducing non-determinism to the mix. Players control their units by issuing unit-actions to each, and a player-action is the combination of unit-actions issued simultaneously at a given game cycle.
 
-A typical RTS game is defined as a zero-sum, multi-player, non-deterministic game with incomplete information. The size of an RTS state space and branching factor, as estimated in a typical \textsc{StarCraft} setting \cite{ontanon_survey_2013}, reaches $10^{1685}$ possible states and $10^{50}$ possible actions in a decision point, respectively. In contrast, Chess and Go possess a state space estimate of $10^{47}$, and $10^{171}$ respectively, with a branching factor equalling $36$ in Chess, and $180$ in Go. These estimates are a clear indicator of the difficulty faced by a game-playing AI in the RTS domain, justifying the growing research interest into this domain.
+A typical RTS game is defined as a zero-sum, multi-player, non-deterministic game with incomplete information. The size of an RTS state space and branching factor, as estimated in a typical \textsc{StarCraft} setting \cite{ontanon_survey_2013}, reaches $10^{1685}$ possible states and $10^{50}$ possible actions in a decision point, respectively. In contrast, Chess and Go possess a state space estimate of $10^{47}$, and $10^{171}$ respectively, with a branching factor equalling $36$ in Chess, and $180$ in Go. These estimates are a clear indicator of the difficulty faced by a game-playing AI in the RTS domain, justifying the growing research interest into this area.
 
 Based on the terminology and definitions presented in \cite{ontanon_combinatorial_2017}, an RTS game can be defined formally as a tuple $G$, where $G = (S, A, P, \tau, L, W, s_{init})$ and each component defined as follows:
 
@@ -113,9 +126,10 @@ Based on the terminology and definitions presented in \cite{ontanon_combinatoria
 
 \subsection{\mRTS{}}
 
-Conducting AI research on commercial RTS games can be a daunting experience, since most games do not offer a suitable API for AI research. To mitigate this shortcoming, several independent solutions were developed, such as ORTS, the \textsc{WarCraft} port, Wargus, and the unofficial \textsc{StarCraft} interface, BWAPI. Much later, an official API, and tool set for \textsc{StarCraft II} was made available, in a collaborative effort between Blizzard and DeepMind \cite{vinyals_starcraft_2017-1}. Additionally, several independent platforms have emerged such as \mRTS{} \cite{ontanon_combinatorial_2013}, ELF \cite{tian_elf_2017} and DeepRTS \cite{andersen_deep_2018}.
+Conducting AI research on commercial RTS games can be a daunting experience, since most games do not offer a suitable API for this purpose. To mitigate this shortcoming, several independent solutions were developed, such as ORTS, the \textsc{WarCraft} port, Wargus, and the unofficial \textsc{StarCraft} interface, BWAPI. Much later, an official API, and tool set for \textsc{StarCraft II} was made available, in a collaborative effort between Blizzard and DeepMind \cite{vinyals_starcraft_2017-1}. Additionally, several independent platforms have emerged such as \mRTS{} \cite{ontanon_combinatorial_2013}, ELF \cite{tian_elf_2017} and DeepRTS \cite{andersen_deep_2018}.
 
-In this paper, we use \mRTS{} as our experimentation test-bed. \mRTS{} is a stripped down RTS game simulator specifically designed for AI research, it features all the challenging aspects of an RTS, without frills. Most importantly, it includes an efficient forward-model, necessary for implementing simulation-based search approaches. A screenshot of a \mRTS{} match is shown in Figure \ref{mRTSScreenshot}. Each player controls 2 types of buildings (Base and Barracks) and 4 types of mobile units (Worker, Light, Ranged, Heavy). The Base is responsible for producing Workers, and the Barracks produces assault units, in exchange with an amount of resources. Resources are accumulated in the base by Worker units, which harvest them from resource deposits. The game map consists of an arbitrary-sized 2D grid, where each square is either free, or occupied by a unit, a structure, or an environment unit (a resource deposit or a wall).
+In this paper, we use \mRTS{} as our experimentation test-bed. It is a stripped down RTS game simulator specifically designed for AI research, featuring all the challenging aspects of an RTS, without frills. Most importantly, it includes an efficient forward-model, necessary for implementing simulation-based search approaches. A screenshot of a \mRTS{} match is shown in Figure \ref{mRTSScreenshot}. Each player controls 2 types of buildings (Base and Barracks) and 4 types of mobile units (Worker, Light, Ranged, Heavy). The Base is responsible for producing Workers, and the Barracks produces assault units, in exchange with an amount of resources. Resources are accumulated in the base by Worker units, which harvest them from resource deposits. The game map consists of an arbitrary-sized 2D grid, where each square is either free, or occupied by a unit, a structure, or an environment unit (a resource deposit or a wall).
+% Antonio - How is the attack implemented in uRTS? I mean, is it a simple 'unit by unit' elimination when they fight (I guess, when they move to a neighbour cell where it is placed an enemy)?
 
 \begin{figure}[t]
 \begin{center}
@@ -131,7 +145,9 @@ In this paper, we use \mRTS{} as our experimentation test-bed. \mRTS{} is a stri
 
 \subsection{Monte Carlo Tree Search (MCTS)}
 
-The goal of an RTS game-playing agent is to compute the optimal player-action $a \in A$, for each decision cycle $t$, where the agent is able to act. The successive, computed player-actions constitute a plan that should lead the agent to victory. Essentially, this translates to a Markov decision process (MDP) under tight computation budget, and high search-space dimensionality constraints. MCTS is a sampling-based search framework applicable to MDPs with large decision spaces, unapproachable to systematic search techniques. MCTS relies on the execution of a large number of Monte Carlo simulations to estimate the value of actions, sampled from the search space following a tree-policy. The MCTS algorithm iteratively constructs a game tree by executing a 4-step process at each iteration. The algorithm can be halted anytime to obtain a decision. An MCTS iteration proceeds as follows : 
+The goal of an RTS game-playing agent is to compute the optimal player-action $a \in A$, for each decision cycle $t$, where the agent is able to act. The successive, computed player-actions constitute a plan that should lead the agent to victory. Essentially, this can be translated to a Markov decision process (MDP) under tight computation budget, and high search-space dimensionality constraints. MCTS is a sampling-based search framework applicable to MDPs with large decision spaces, unapproachable to systematic search techniques. MCTS relies on the execution of a large number of Monte Carlo simulations 
+% Antonio - What is a Monte Carlo simulation? :_D
+to estimate the value of actions, sampled from the search space following a tree-policy. The MCTS algorithm iteratively constructs a game tree by executing a 4-step process at each iteration. The algorithm can be halted anytime to obtain a decision. An MCTS iteration proceeds as follows : 
 
 \begin{enumerate}
 \item Selection : Select a node with unexplored children, following a tree policy.
@@ -140,7 +156,7 @@ The goal of an RTS game-playing agent is to compute the optimal player-action $a
 \item Backpropagation : Backpropagate the simulation's results starting from the new node up to the root node, updating all the intermediary nodes' statistics (visit count and value) on the way.
 \end{enumerate}
 
-The most visited decision is usually the one returned. Given enough computation budget and a proper exploration / exploitation equilibrium in the tree policy, MCTS is guaranteed to find the minimax solution, in the limits. The most popular MCTS implementation, UCT (Upper Confidence bounds for Trees), uses UCB1 formula as a tree policy, treating the selection phase as a multi-armed bandit (MAB) problem. Although remarkably successful in Go, UCT does not perform as well in RTS games, due to the rapid growth in the branching factor, with the increase in the unit count. NaïveMCTS was specifically designed to address the combinatorial search space in RTS games, by formulating the selection phase as a combinatorial MAB (CMAB). Additionally, NaïveMCTS employs a naïve sampling approach that relies on a naïve assumption considering the reward estimate of a player-action as the sum of the reward estimates of the underlying unit-actions. In our experiments, we used both UCT and NaïveMCTS as the base search algorithms for our pruning approach.
+The most visited decision is usually the one returned. Given enough computation budget and a proper exploration / exploitation balance in the tree policy, MCTS is guaranteed to find the minimax solution, in the limits. The most popular MCTS implementation, UCT (Upper Confidence bounds for Trees), uses UCB1 formula as a tree policy, treating the selection phase as a multi-armed bandit (MAB) problem. Although remarkably successful in Go, UCT does not perform as well in RTS games, due to the rapid growth in the branching factor, with the increase in the unit count. NaïveMCTS was specifically designed to work with the combinatorial search space in RTS games, by formulating the selection phase as a combinatorial MAB (CMAB). Additionally, NaïveMCTS employs a naïve sampling approach that relies on a naïve assumption considering the reward estimate of a player-action as the sum of the reward estimates of the underlying unit-actions. In our experiments, we used both UCT and NaïveMCTS as the base search algorithms for our pruning approach.
 
 % -------------------------------------------- RELATED WORKS ------------------------------------------
 
@@ -162,18 +178,19 @@ Techniques that rely on machine learning try to learn a tree policy, from expert
 
 If we adjust our perspective, the aforementioned approaches can all be regarded as move pruning approaches \cite{yang_integrating_2020}. By focusing on a set of promising, expert-based player-actions, theses approaches effectively prune the search space of all the remaining player-actions, significantly reducing the branching factor. Regardless, such a practice can also be unsafe and prone to exploitation, due to the coarser player-actions considered, resulting in a loss of tactical performance. To address this issue, several approaches combining low- and high-level search have emerged, such as \cite{barriga_combining_2017}, \cite{neufeld_hybrid_2019} and \cite{moraes_action_2018}.
 
-Directly pruning player-actions, responsible for weak playing strength, can be an alternative approach towards focusing search on promising actions, without compromising tactical strength. In the context Chess \cite{heinz_adaptive_1999} and Shogi \cite{hoki_efficiency_2012}, $\alpha\beta$ search was enhanced by several forward pruning methods, such as Null-move pruning and futility pruning, that reduce the branching factor by removing statistically weak moves. In Go, a domain-dependent pruning approach was implemented in UCT \cite{huang_pruning_2010-1}, exploiting territory information. Similar MCTS improvements were applied in Hex \cite{arneson_monte_2010-1}, Havannah \cite{dugueperoux_pruning_2016} and DeadEnd \cite{he_game_2008-1}. In video-games, Sephton et al \cite{sephton_heuristic_2014} also enhanced MCTS by applying a knowledge-based move pruning approach for the strategic card game, Lords of War. In this paper we apply a domain-dependent hard-pruning approach, for MCTS agents in RTS games, targeting a specific type of player-actions.
+Directly pruning player-actions, responsible for weak playing strength, can be an alternative approach towards focusing search on promising actions, without compromising tactical strength. In the context Chess \cite{heinz_adaptive_1999} and Shogi \cite{hoki_efficiency_2012}, $\alpha\beta$ search was enhanced by several forward pruning methods, such as Null-move pruning and futility pruning, that reduce the branching factor by removing statistically weak moves. In Go, a domain-dependent pruning approach was implemented in UCT \cite{huang_pruning_2010-1}, exploiting territory information. Similar MCTS improvements were applied in Hex \cite{arneson_monte_2010-1}, Havannah \cite{dugueperoux_pruning_2016} and DeadEnd \cite{he_game_2008-1}. In video-games, Sephton et al \cite{sephton_heuristic_2014} also enhanced MCTS by applying a knowledge-based move pruning approach for the strategic card game, Lords of War.
+
+In this paper we apply a domain-dependent hard-pruning approach, for MCTS agents in RTS games, targeting a specific type of player-actions.
 
 
 % --------------------------------------- PROPOSED MOVE PRUNING METHOD ------------------------------------------
-% Antonio - This section is called the same as previous subsection
 
 \section{Proposed Move Pruning Method}
 \label{sec:proposed_method}
 
 We propose to act directly on the decision space, and hard-prune a portion of decisions we deem irrelevant and/or detrimental to the performance of MCTS. By doing so, MCTS will be freed from sampling those decisions and simulating their outcomes, and the computation budget gained will be utilized to focus on, hopefully, more relevant and significant decisions. Consequentially, the playing strength and scalability of MCTS should be improved.
 
-As a first attempt, we chose to focus on player-actions having the highest chance of misleading search, and negatively impacting the playing strength. Out of these player-actions, we believe Inactive Player-Actions (IPAs) naturally come first. Thus, we implemented a number of pruning approaches that keep a predefined amount (fixed or relative) of those player-actions, and prune the remaining. We will briefly discuss the structure of RTS player-actions, and then define IPAs.
+As a first attempt, we chose to focus on player-actions having the highest chance of misleading search, and negatively impacting the playing strength. Out of these player-actions, we believe Inactive Player-Actions (IPAs) naturally come first. Thus, we implemented a number of pruning approaches that keep a predefined amount (fixed or relative) of those player-actions, and prune the remaining. We will briefly discuss the structure of RTS player-actions in the next section, and then define IPAs.
 
 % ===========================================
 
@@ -255,7 +272,7 @@ These pruning approaches can be easily implemented and adapted to any search alg
 \begin{figure*}[!h]
 \begin{center}
 	\includegraphics[width=1\textwidth]{figs/PT-h.pdf}
-	\caption{Results of the pruning analysis experiments. Each data point represents $500$ match between the basic MCTS agent and the one augmented with IPA pruning. In each plot, the vertical axis represents the score obtained by the IPA pruning MCTS agent, against the base MCTS agent. The score is calculated as such : $score = ((Wins + (Draws / 2)) / 500) \times 100$. A match is considered a draw if no winner has been decided after $3000$, $3500$ and $4000$ cycles in each map of size $8\times8$, $12\times12$ and $16\times16$ respectively.}
+	\caption{Results of the pruning analysis experiments. Each data point represents $500$ matches between the basic MCTS agent and the one augmented with IPA pruning. In each plot, the vertical axis represents the score obtained by the IPA pruning MCTS agent, against the base MCTS agent. The score is calculated as such : $score = ((Wins + (Draws / 2)) / 500) \times 100$. A match is considered a draw if no winner has been decided after $3000$, $3500$ and $4000$ cycles in each map of size $8\times8$, $12\times12$ and $16\times16$ respectively.}
 	\label{PruningAnalysis}
 \end{center}
 \end{figure*}
@@ -276,7 +293,7 @@ These pruning approaches can be easily implemented and adapted to any search alg
 
 To study the effect of pruning IPAs on MCTS, we implemented the four aforementioned pruning techniques in UCT and NaïveMCTS, and conducted various experiments in \mRTS{}. It is true that UCT's performance suffers greatly in RTS scenarios, due to UCB1's limitations in combinatorial search spaces \cite{ontanon_combinatorial_2013}, nevertheless, we wanted to see if pruning IPAs would alleviate the dimensionality burden, and result in a performance improvement. Integrating IPA pruning into UCT and NaïveMCTS generated new agents that we refer to by suffixing the acronym of the technique to the that of the original search approach. For instance the agent using RIP-R in UCT or NaïveMCTS is noted as UCT-RIP-R($p$) or NMCTS-RIP-R($p$).
 
-We first analysed the performance of RIP-F and RIP-R, with respect to the amount of IPAs allowed, the size of the map in use, and the MCTS algorithm. We then took the best performing pruning approaches for each MCTS algorithm and map size, and performed a round-robin tournament with other \mRTS{} agents. Afterwards, we examined the impact on the branching factor and performed a scalability test in larger maps. The experiments were carried out on two PCs with an Intel Core i5 and i7 CPUs, clocked at 3.1Ghz and 3.4Ghz respectively, using the latest version of \mRTS{} at the time of writing.
+We first analysed the performance of RIP-F and RIP-R, with respect to the amount of IPAs allowed, the size of the map in use, and the MCTS algorithm. We then took the best performing pruning approaches for each MCTS algorithm and map size, and performed a round-robin tournament with other \mRTS{} agents. Afterwards, we examined the impact on the branching factor and performed a scalability test in larger maps. The experiments were carried out on two PCs with Intel Core i5 and i7 CPUs, clocked at 3.1Ghz and 3.4Ghz respectively, using the latest version of \mRTS{} at the time of writing.
 
 % ===========================================
 
@@ -322,11 +339,15 @@ NaïveMCTS & RIP-R(0.9) & $62.3$ & RIP-R(0) & $73.3$ & RIP-F(0) & $78.6$ \\
 }
 \end{table}
 
+% Antonio -  In 16x16 for UCT shouldn't it be DRIP instead of RIP?
+%                  Don't you comment these results?
+
 % ===========================================
 
 \subsection{Performance Analysis}
 
-To further assess the performance impact of IPA pruning on MCTS agents, we ran a round-robin tournament between 8 \mRTS{} agents, including two MCTS agents enhanced with IPA pruning. The tournament consists of 100 iteration, where in each iteration every agent plays a match against the other agents, resulting in $8\times7\times100 = 5600$ match in each of the maps used previously. The participating \mRTS{} agents include four baseline agents and one top performing agent from 2019's \mRTS{} competition, namely :
+To further assess the performance impact of IPA pruning on MCTS agents, we have run a round-robin tournament between 8 \mRTS{} agents, including two MCTS agents enhanced with IPA pruning. The tournament consists of 100 iteration, where in each iteration every agent plays a match against the other agents, resulting in $8\times7\times100 = 5600$ matches in each of the maps used previously. The participating \mRTS{} agents include four baseline agents and one top performing agent from 2019's \mRTS{} competition, MixedBot:
+% Antonio - I guess MixedBot is the top performing agent.:D
 
 \begin{itemize}
 \item \textit{NaïveMCTS:} The original unmodified NaïveMCTS.
@@ -398,7 +419,7 @@ Agent & Map & \begin{tabular}[c]{@{}c@{}}Avg. Branching \\Factor ($b$) (Incl IPA
 \end{tabular}}
 \end{table*}
 
-The results demonstrate how IPA pruning positively affects the playing strength of UCT and NaïveMCTS. Looking at the average scores, NMCTS-RIP achieved a $12.8$ points increase with respect to NaïveMCTS, and UCT-RIP achieved a near $20$ points increase relative to UCT. IPA pruning in UCT (UCT-RIP) managed to shrink the performance gap between UCT and NaïveMCTS from $30$ points to $10.1$ points, noticeable in Figure \ref{TournamentResultsAllMaps}, where UCT-RIP's performance closely matches that of NaïveMCTS in the $8\times8$ map. Moreover, NMCTS-RIP was able to score a higher average than POLightRush, one of the strongest scripts usually outranking NaïveMCTS. Against each individual agent, both NMCTS-RIP and UCT-RIP obtained significantly higher scores than those of NaïveMCTS and UCT respectively.
+The results demonstrate how IPA pruning positively affects the playing strength of UCT and NaïveMCTS. Looking at the average scores, NMCTS-RIP achieved a $12.8$ points of increase with respect to NaïveMCTS, and UCT-RIP achieved a near $20$ points of increase relative to UCT. IPA pruning in UCT (UCT-RIP) managed to shrink the performance gap between UCT and NaïveMCTS from $30$ points to $10.1$ points, noticeable in Figure \ref{TournamentResultsAllMaps}, where UCT-RIP's performance closely matches that of NaïveMCTS in the $8\times8$ map. Moreover, NMCTS-RIP was able to score a higher average than POLightRush, one of the strongest scripts usually outranking NaïveMCTS. Against each individual agent, both NMCTS-RIP and UCT-RIP obtained significantly higher scores than those of NaïveMCTS and UCT respectively.
 
 As expected, scripts and script-based approaches exhibit a superior performance versus low-level MCTS search approaches, due to the integration of expert knowledge in the form of hard-coded scripts. Expert knowledge inherently steers search away from detrimental player-actions, by focusing only on a limited set of player-actions deemed more rewarding, at the cost of losing decision granularity and becoming prone to possible exploitation. By directly pruning detrimental player-actions, we hope to focus search on a wider range of interesting player-actions while keeping a higher degree of decision granularity. The fact that NMCTS-RIP could achieve a higher average score than MixedBot in the $12\times12$ map signifies that our approach could be promising.
 
@@ -406,7 +427,9 @@ As expected, scripts and script-based approaches exhibit a superior performance 
 
 \subsection{Branching Factor \& Scalability}
 
-To better grasp how IPA pruning affects MCTS performance, we took $100$ mid-game states from matches between NMCTS-RIP and NaïveMCTS, and ran a $100ms$ search, starting from those states, for both agents. The search was limited to one ply, and the mid-game was defined at $400$, $600$ and $1000$ game cycles for each map of size $8\times8$, $12\times12$ and $16\times16$, respectively. The statistics collected during these searches are reported in Table \ref{BranchingFactorTable}.
+To better grasp how IPA pruning affects MCTS performance, we took $100$ mid-game states from matches between NMCTS-RIP and NaïveMCTS, and ran a $100ms$ search, starting from those states, for both agents. The search was limited to one ply, 
+% Antonio - What is a 'ply'?
+and the mid-game was defined at $400$, $600$ and $1000$ game cycles for each map of size $8\times8$, $12\times12$ and $16\times16$, respectively. The statistics collected during these searches are reported in Table \ref{BranchingFactorTable}.
 
 We can see that the branching factor ($b$) in mid-game states is higher in NMCTS-RIP, which can be interpreted as the result of the similarly higher, average unit-actions ($m$). This, in turn, is the consequence of units being spread out on the map, due to lesser IPAs (more movements), leading to more space between units, and thus, more possibilities for each. NMCTS-RIP samples player-actions from a portion of the decision space having a lower bound branching factor, $b'$, expanded with the number of IPAs involving trapped units and a random set of allowed IPAs defined by the pruning approach.
 
